update: basename and get dim scales via attribute-syntax

--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -14,15 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "id": "3026a8e2-ebf6-48aa-9bd6-9d915b9672d9",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:46.804728Z",
-     "iopub.status.busy": "2022-08-23T08:59:46.804728Z",
-     "iopub.status.idle": "2022-08-23T08:59:47.731789Z",
-     "shell.execute_reply": "2022-08-23T08:59:47.731789Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -40,15 +34,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "52a96fd3-318c-4e0a-8c57-82cfcb170480",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:47.731789Z",
-     "iopub.status.busy": "2022-08-23T08:59:47.731789Z",
-     "iopub.status.idle": "2022-08-23T08:59:47.747442Z",
-     "shell.execute_reply": "2022-08-23T08:59:47.747442Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -69,15 +57,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "569b7ff4-5e17-4eda-9e8b-d449277f203e",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:47.747442Z",
-     "iopub.status.busy": "2022-08-23T08:59:47.747442Z",
-     "iopub.status.idle": "2022-08-23T08:59:47.763114Z",
-     "shell.execute_reply": "2022-08-23T08:59:47.763114Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -87,7 +69,7 @@
        "Test_SNC (version number: 1)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,16 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "77561296-edfe-476c-b316-553c1ff92cee",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:47.763114Z",
-     "iopub.status.busy": "2022-08-23T08:59:47.763114Z",
-     "iopub.status.idle": "2022-08-23T08:59:47.778707Z",
-     "shell.execute_reply": "2022-08-23T08:59:47.778707Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -125,7 +100,7 @@
        "  'description': 'velocity is a vector quantity.'}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,16 +120,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "id": "1c3230f1-2a0d-4b09-b885-3b6a8a16fe83",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:47.778707Z",
-     "iopub.status.busy": "2022-08-23T08:59:47.778707Z",
-     "iopub.status.idle": "2022-08-23T08:59:47.794326Z",
-     "shell.execute_reply": "2022-08-23T08:59:47.794326Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -199,59 +167,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
    "id": "9e4ce9fe-de0e-4e3c-9410-e5dc891294af",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:47.794326Z",
-     "iopub.status.busy": "2022-08-23T08:59:47.794326Z",
-     "iopub.status.idle": "2022-08-23T08:59:47.809982Z",
-     "shell.execute_reply": "2022-08-23T08:59:47.809982Z"
-    },
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>canonical_units</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <td>s</td>\n",
-       "      <td>physical time</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>x_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity. x indicates the component in y-axis direction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity. y indicates the component in y-axis direction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity. z indicates the component in z-axis direction</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test_SNC (version: 1)\n",
+      "+------------+-------------------+------------------------------------------------------------------------------+\n",
+      "|            | canonical_units   | description                                                                  |\n",
+      "|------------+-------------------+------------------------------------------------------------------------------|\n",
+      "| time       | s                 | physical time                                                                |\n",
+      "| x_velocity | m/s               | velocity is a vector quantity. x indicates the component in y-axis direction |\n",
+      "| y_velocity | m/s               | velocity is a vector quantity. y indicates the component in y-axis direction |\n",
+      "| z_velocity | m/s               | velocity is a vector quantity. z indicates the component in z-axis direction |\n",
+      "+------------+-------------------+------------------------------------------------------------------------------+\n"
+     ]
     }
    ],
    "source": [
@@ -259,7 +194,7 @@
     "sc.modify('x_velocity', canonical_units='m/s', description='velocity is a vector quantity. x indicates the component in y-axis direction')\n",
     "sc.set('y_velocity', canonical_units='m/s', description='velocity is a vector quantity. y indicates the component in y-axis direction')\n",
     "sc.set('z_velocity', canonical_units='m/s', description='velocity is a vector quantity. z indicates the component in z-axis direction')\n",
-    "sc.dump()"
+    "sc.sdump()"
    ]
   },
   {
@@ -277,19 +212,13 @@
    "execution_count": 7,
    "id": "7d29f972-b6c2-4a25-85cc-8d8c39f28154",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:47.809982Z",
-     "iopub.status.busy": "2022-08-23T08:59:47.809982Z",
-     "iopub.status.idle": "2022-08-23T08:59:47.826082Z",
-     "shell.execute_reply": "2022-08-23T08:59:47.826082Z"
-    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "WindowsPath('C:/Users/da4323/AppData/Local/h5rdmtoolbox/h5rdmtoolbox/tmp/tmp16/tmp0.xml')"
+       "WindowsPath('C:/Users/da4323/AppData/Local/h5rdmtoolbox/h5rdmtoolbox/tmp/tmp26/tmp0.xml')"
       ]
      },
      "execution_count": 7,
@@ -315,12 +244,6 @@
    "execution_count": 8,
    "id": "be7625e3-349d-49bd-a14c-e9b2f220da91",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:47.826082Z",
-     "iopub.status.busy": "2022-08-23T08:59:47.826082Z",
-     "iopub.status.idle": "2022-08-23T08:59:47.841841Z",
-     "shell.execute_reply": "2022-08-23T08:59:47.841841Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -393,14 +316,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "49060588-f59a-415b-b0ca-55afbf4f609a",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:47.841841Z",
-     "iopub.status.busy": "2022-08-23T08:59:47.841841Z",
-     "iopub.status.idle": "2022-08-23T08:59:47.967528Z",
-     "shell.execute_reply": "2022-08-23T08:59:47.967528Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -422,14 +338,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "24fcc5e1-6c7a-43ce-a370-47ebe5449ba5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:47.967528Z",
-     "iopub.status.busy": "2022-08-23T08:59:47.967528Z",
-     "iopub.status.idle": "2022-08-23T08:59:48.093196Z",
-     "shell.execute_reply": "2022-08-23T08:59:48.093196Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -499,14 +408,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "ae55dbd6-af9a-4346-b232-b9f4fed3e436",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:48.093196Z",
-     "iopub.status.busy": "2022-08-23T08:59:48.093196Z",
-     "iopub.status.idle": "2022-08-23T08:59:48.108716Z",
-     "shell.execute_reply": "2022-08-23T08:59:48.108716Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -527,14 +429,7 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "7ef1281b-1b74-4143-b57e-299735526941",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:48.108716Z",
-     "iopub.status.busy": "2022-08-23T08:59:48.108716Z",
-     "iopub.status.idle": "2022-08-23T08:59:48.124949Z",
-     "shell.execute_reply": "2022-08-23T08:59:48.124949Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -561,14 +456,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "67174d49-18b5-4c47-af61-36e391f85eb0",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:48.124949Z",
-     "iopub.status.busy": "2022-08-23T08:59:48.124949Z",
-     "iopub.status.idle": "2022-08-23T08:59:48.140714Z",
-     "shell.execute_reply": "2022-08-23T08:59:48.140714Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "try:\n",
@@ -581,14 +469,7 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "a77d1c78-6a18-434d-b483-5cfeb049fd37",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:48.140714Z",
-     "iopub.status.busy": "2022-08-23T08:59:48.140714Z",
-     "iopub.status.idle": "2022-08-23T08:59:48.156348Z",
-     "shell.execute_reply": "2022-08-23T08:59:48.156348Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from h5rdmtoolbox.conventions.identifier import _units_power_fix"
@@ -598,14 +479,7 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "a773fd35-a187-4bd3-a083-d944b8347130",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:48.156348Z",
-     "iopub.status.busy": "2022-08-23T08:59:48.156348Z",
-     "iopub.status.idle": "2022-08-23T08:59:48.172005Z",
-     "shell.execute_reply": "2022-08-23T08:59:48.172005Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -626,14 +500,7 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "6497fe45-cb00-4566-9031-4fdad221ccff",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-23T08:59:48.172005Z",
-     "iopub.status.busy": "2022-08-23T08:59:48.172005Z",
-     "iopub.status.idle": "2022-08-23T08:59:48.187634Z",
-     "shell.execute_reply": "2022-08-23T08:59:48.187634Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
