--- a/docs/h5wrapper/FileExploration.ipynb
+++ b/docs/h5wrapper/FileExploration.ipynb
@@ -12,15 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a3bc2c52-85e0-45bd-b2fd-1d7288637583",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-24T07:31:49.388469Z",
-     "iopub.status.busy": "2022-08-24T07:31:49.388469Z",
-     "iopub.status.idle": "2022-08-24T07:31:50.416127Z",
-     "shell.execute_reply": "2022-08-24T07:31:50.416127Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -38,15 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "65294bdf-db4b-4edd-b069-5d6aa2a6110f",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-24T07:31:50.416127Z",
-     "iopub.status.busy": "2022-08-24T07:31:50.416127Z",
-     "iopub.status.idle": "2022-08-24T07:31:50.435995Z",
-     "shell.execute_reply": "2022-08-24T07:31:50.435995Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -62,6 +50,28 @@
     "    h5.create_dataset('gr_1/ds_1', shape=(2, 4), units='', long_name='dataset 2',\n",
     "                      attrs=dict(mean=1.5))\n",
     "    filename = h5.hdf_filename"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da9cda49-6eb6-4a6c-bcda-fb90110e92ad",
+   "metadata": {},
+   "source": [
+    "## Basenames\n",
+    "Sometimes it is useful to get the basename instead of the name of an HDF5 object. The name is equal to the path while the basename is the name of the dataset or group. `basename` is a property of datasets and groups:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58d3616e-052c-43e1-9769-3dff328a9acb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File(filename) as h5:\n",
+    "    print('name             basename')\n",
+    "    print(h5.gr_1.name, '      --> ', h5.gr_1.basename)\n",
+    "    print(h5.gr_1.ds_1.name, ' --> ', h5.gr_1.ds_1.basename)"
    ]
   },
   {
@@ -87,26 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0f8f3a59-607a-4c83-ad58-5b5bb49eceac",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-24T07:31:50.435995Z",
-     "iopub.status.busy": "2022-08-24T07:31:50.435995Z",
-     "iopub.status.idle": "2022-08-24T07:31:50.466998Z",
-     "shell.execute_reply": "2022-08-24T07:31:50.466998Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 group \"/gr_1\" (1 members)>, <HDF5 group \"/grp_1\" (0 members)>, <HDF5 group \"/grp_2\" (0 members)>]\n",
-      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_2\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'$group': ''}, rec=True))\n",
@@ -124,26 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "11c0fee6-cc3c-4875-9cde-8725ba3d7192",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-24T07:31:50.471000Z",
-     "iopub.status.busy": "2022-08-24T07:31:50.471000Z",
-     "iopub.status.idle": "2022-08-24T07:31:50.498836Z",
-     "shell.execute_reply": "2022-08-24T07:31:50.498836Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 group \"/grp_1\" (0 members)>]\n",
-      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'$group': 'grp_1'}, rec=True))\n",
@@ -161,27 +139,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c7b77acb-9a7d-4cf1-9f51-cbbe7bdaeea7",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-24T07:31:50.498836Z",
-     "iopub.status.busy": "2022-08-24T07:31:50.498836Z",
-     "iopub.status.idle": "2022-08-24T07:31:50.515900Z",
-     "shell.execute_reply": "2022-08-24T07:31:50.514891Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 group \"/grp_1\" (0 members)>, <HDF5 group \"/grp_2\" (0 members)>]\n",
-      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_2\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'$group': {'$regex': 'grp_[0-9]'}}, rec=True))\n",
@@ -199,25 +162,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5e909a0d-10d7-4cab-ae11-b52bfdbcf6ee",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-24T07:31:50.515900Z",
-     "iopub.status.busy": "2022-08-24T07:31:50.515900Z",
-     "iopub.status.idle": "2022-08-24T07:31:50.530981Z",
-     "shell.execute_reply": "2022-08-24T07:31:50.530981Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'long_name': 'dataset 1'}, rec=True))"
@@ -225,25 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "efdce770-e975-4896-b30b-a7242e955df8",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-24T07:31:50.530981Z",
-     "iopub.status.busy": "2022-08-24T07:31:50.530981Z",
-     "iopub.status.idle": "2022-08-24T07:31:50.546815Z",
-     "shell.execute_reply": "2022-08-24T07:31:50.546815Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'long_name': 'dataset 1'}, rec=True))"
@@ -251,25 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3a614c10-a9bf-42be-ae7d-476aabba9463",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-24T07:31:50.550904Z",
-     "iopub.status.busy": "2022-08-24T07:31:50.546815Z",
-     "iopub.status.idle": "2022-08-24T07:31:50.566003Z",
-     "shell.execute_reply": "2022-08-24T07:31:50.566003Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_2\": shape (2, 4), type \"<f4\">, <HDF5 dataset \"ds_1\": shape (2, 4), type \"<f4\">]\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with h5tbx.H5File(filename) as h5:\n",
     "    print(h5.find({'mean': {'$gt': 1.}}, rec=True))"
