--- a/docs/h5database/h5mongo.ipynb
+++ b/docs/h5database/h5mongo.ipynb
@@ -14,19 +14,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "1e3c96fc-62ac-4462-8e87-d131aeb52c53",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:26.318716Z",
-     "iopub.status.busy": "2022-08-19T06:03:26.318716Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.449046Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.449046Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.1.3'"
+       "'0.1.9'"
       ]
      },
      "execution_count": 1,
@@ -50,14 +43,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "b40e8640-b166-4792-913b-6ce39765eef4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.449046Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.449046Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.468858Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.468858Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -79,14 +65,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "a8f3cb21-e1e3-4969-9103-a48ac49547b9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.468858Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.468858Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.488515Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.487303Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "db = client['h5database_notebook_tutorial']\n",
@@ -105,14 +84,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "6eaaf961-e59f-47a4-9b37-7384b755cedf",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.488515Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.488515Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.518665Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.518665Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "usernames = ('Allen', 'Mike', 'Ellen', 'Alliot')\n",
@@ -140,14 +112,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "8741cd44-0b1b-4931-a26b-19530917f6bb",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.518665Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.518665Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.538593Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.538593Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from h5rdmtoolbox.h5database import mongo"
@@ -171,28 +136,8 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "a2d48a6d-1d80-4dd9-b145-18004d61014f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.538593Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.538593Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.598791Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.598665Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\h5database\\mongo.py:34: UserWarning: Could not determine/convert type. Try to continue with type <class 'datetime.datetime'> of 2022-08-19 06:03:27.488516+00:00. Original error: Cannot interpret 'datetime.datetime(2022, 8, 19, 6, 3, 27, 488516, tzinfo=datetime.timezone.utc)' as a data type\n",
-      "  warnings.warn(f'Could not determine/convert type. Try to continue with type {type(av)} of {av}. '\n",
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\h5database\\mongo.py:34: UserWarning: Could not determine/convert type. Try to continue with type <class 'datetime.datetime'> of 2022-08-19 06:03:27.498744+00:00. Original error: Cannot interpret 'datetime.datetime(2022, 8, 19, 6, 3, 27, 498744, tzinfo=datetime.timezone.utc)' as a data type\n",
-      "  warnings.warn(f'Could not determine/convert type. Try to continue with type {type(av)} of {av}. '\n",
-      "C:\\Users\\da4323\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\h5database\\mongo.py:34: UserWarning: Could not determine/convert type. Try to continue with type <class 'datetime.datetime'> of 2022-08-19 06:03:27.503239+00:00. Original error: Cannot interpret 'datetime.datetime(2022, 8, 19, 6, 3, 27, 503239, tzinfo=datetime.timezone.utc)' as a data type\n",
-      "  warnings.warn(f'Could not determine/convert type. Try to continue with type {type(av)} of {av}. '\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
     "collection.drop() # delete all entries if already exist\n",
     "for fname in filenames:\n",
@@ -220,25 +165,19 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "07927616-fcbf-4a65-adda-c608f4c3f8fc",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.598791Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.598791Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.618655Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.618452Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'__h5rdmtoolbox_version__': '0.1.3',\n",
+      "{'__h5rdmtoolbox_version__': '0.1.9',\n",
       " '__standard_name_table__': 'EmptyStandardizedNameTable-v0',\n",
       " '__wrcls__': 'H5File',\n",
-      " '_id': ObjectId('62ff27af2a7fa06235ffd468'),\n",
+      " '_id': ObjectId('630c890316499a3a4e50d71e'),\n",
       " 'company': 'bikeCompany',\n",
-      " 'file_creation_time': datetime.datetime(2022, 8, 19, 6, 3, 27, 488000),\n",
+      " 'file_creation_time': datetime.datetime(2022, 8, 29, 9, 38, 11, 490000),\n",
+      " 'filename': 'C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp40\\\\tmp0',\n",
       " 'idgroup': {'id': 0},\n",
       " 'meta': {'day': 'monday', 'iday': 0},\n",
       " 'username': 'Allen'}\n"
@@ -270,52 +209,49 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "99426a16-99ad-4f2f-ae9a-ea8f2a782700",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.618655Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.618655Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.638861Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.638861Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'__h5rdmtoolbox_version__': '0.1.3',\n",
+      "{'__h5rdmtoolbox_version__': '0.1.9',\n",
       " '__standard_name_table__': 'EmptyStandardizedNameTable-v0',\n",
       " '__wrcls__': 'H5File',\n",
-      " '_id': ObjectId('62ff27af2a7fa06235ffd468'),\n",
+      " '_id': ObjectId('630c890316499a3a4e50d71e'),\n",
       " 'company': 'bikeCompany',\n",
-      " 'file_creation_time': datetime.datetime(2022, 8, 19, 6, 3, 27, 488000),\n",
+      " 'file_creation_time': datetime.datetime(2022, 8, 29, 9, 38, 11, 490000),\n",
+      " 'filename': 'C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp40\\\\tmp0',\n",
       " 'idgroup': {'id': 0},\n",
       " 'meta': {'day': 'monday', 'iday': 0},\n",
       " 'username': 'Allen'}\n",
-      "{'__h5rdmtoolbox_version__': '0.1.3',\n",
+      "{'__h5rdmtoolbox_version__': '0.1.9',\n",
       " '__standard_name_table__': 'EmptyStandardizedNameTable-v0',\n",
       " '__wrcls__': 'H5File',\n",
-      " '_id': ObjectId('62ff27af2a7fa06235ffd469'),\n",
+      " '_id': ObjectId('630c890316499a3a4e50d71f'),\n",
       " 'company': 'shoeCompany',\n",
-      " 'file_creation_time': datetime.datetime(2022, 8, 19, 6, 3, 27, 498000),\n",
+      " 'file_creation_time': datetime.datetime(2022, 8, 29, 9, 38, 11, 496000),\n",
+      " 'filename': 'C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp40\\\\tmp1',\n",
       " 'idgroup': {'id': 1},\n",
       " 'meta': {'day': 'monday', 'iday': 0},\n",
       " 'username': 'Mike'}\n",
-      "{'__h5rdmtoolbox_version__': '0.1.3',\n",
+      "{'__h5rdmtoolbox_version__': '0.1.9',\n",
       " '__standard_name_table__': 'EmptyStandardizedNameTable-v0',\n",
       " '__wrcls__': 'H5File',\n",
-      " '_id': ObjectId('62ff27af2a7fa06235ffd46a'),\n",
+      " '_id': ObjectId('630c890316499a3a4e50d720'),\n",
       " 'company': 'bikeCompany',\n",
-      " 'file_creation_time': datetime.datetime(2022, 8, 19, 6, 3, 27, 498000),\n",
+      " 'file_creation_time': datetime.datetime(2022, 8, 29, 9, 38, 11, 502000),\n",
+      " 'filename': 'C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp40\\\\tmp2',\n",
       " 'idgroup': {'id': 2},\n",
       " 'meta': {'day': 'monday', 'iday': 0},\n",
       " 'username': 'Ellen'}\n",
-      "{'__h5rdmtoolbox_version__': '0.1.3',\n",
+      "{'__h5rdmtoolbox_version__': '0.1.9',\n",
       " '__standard_name_table__': 'EmptyStandardizedNameTable-v0',\n",
       " '__wrcls__': 'H5File',\n",
-      " '_id': ObjectId('62ff27af2a7fa06235ffd46b'),\n",
+      " '_id': ObjectId('630c890316499a3a4e50d721'),\n",
       " 'company': 'shoeCompany',\n",
-      " 'file_creation_time': datetime.datetime(2022, 8, 19, 6, 3, 27, 503000),\n",
+      " 'file_creation_time': datetime.datetime(2022, 8, 29, 9, 38, 11, 508000),\n",
+      " 'filename': 'C:\\\\Users\\\\da4323\\\\AppData\\\\Local\\\\h5rdmtoolbox\\\\h5rdmtoolbox\\\\tmp\\\\tmp40\\\\tmp3',\n",
       " 'idgroup': {'id': 3},\n",
       " 'meta': {'day': 'monday', 'iday': 0},\n",
       " 'username': 'Alliot'}\n"
@@ -341,12 +277,6 @@
    "execution_count": 9,
    "id": "21435d7e-495b-45cb-922b-fdcd9876442f",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.638861Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.638861Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.658603Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.658603Z"
-    },
     "tags": []
    },
    "outputs": [
@@ -354,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-08-19 05:13:27.638861\n"
+      "2022-08-29 08:48:11.679449\n"
      ]
     }
    ],
@@ -378,14 +308,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "e0aa17f2-db1a-43a3-9c2f-67046b45d456",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.658603Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.658603Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.678647Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.678474Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -414,14 +337,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "b69da5b4-414b-4601-ad16-fb7b55cb0ccd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.678647Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.678647Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.698549Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.698549Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -450,19 +366,12 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "f9776c75-6e1c-4a56-8dcb-dcda1434750c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.698549Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.698549Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.718930Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.718930Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2022, 8, 19, 6, 3, 27, tzinfo=<bson.tz_util.FixedOffset object at 0x000001EC123E0850>)"
+       "datetime.datetime(2022, 8, 29, 9, 38, 11, tzinfo=<bson.tz_util.FixedOffset object at 0x0000022D79EB2BB0>)"
       ]
      },
      "execution_count": 12,
@@ -486,19 +395,12 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "d105c1c3-53c5-4c9e-beaa-31efc3f0b76f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-08-19T06:03:27.718930Z",
-     "iopub.status.busy": "2022-08-19T06:03:27.718930Z",
-     "iopub.status.idle": "2022-08-19T06:03:27.738623Z",
-     "shell.execute_reply": "2022-08-19T06:03:27.738623Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1ec31c5f490>"
+       "<pymongo.results.UpdateResult at 0x22d1962cf70>"
       ]
      },
      "execution_count": 13,
