--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "3026a8e2-ebf6-48aa-9bd6-9d915b9672d9",
    "metadata": {
     "tags": []
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "52a96fd3-318c-4e0a-8c57-82cfcb170480",
    "metadata": {
     "tags": []
@@ -57,23 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "569b7ff4-5e17-4eda-9e8b-d449277f203e",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Test_SNC (version number: 1)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc = h5tbx.conventions.StandardizedNameTable(name='Test_SNC', table_dict={}, version_number=1, contact='contact@python.com', institution='my_institution')\n",
     "sc"
@@ -89,22 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "77561296-edfe-476c-b316-553c1ff92cee",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'x_velocity': {'canonical_units': 'm/s',\n",
-       "  'description': 'velocity is a vector quantity.'}}"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tabledict = {'x_velocity': dict(canonical_units='m/s', description='velocity is a vector quantity.')}\n",
     "tabledict"
@@ -120,38 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "1c3230f1-2a0d-4b09-b885-3b6a8a16fe83",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>canonical_units</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>x_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity.</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc.update(tabledict)\n",
     "sc.dump()"
@@ -162,33 +111,17 @@
    "id": "584a57e5-acf8-456a-bad4-cfdeea50dfb8",
    "metadata": {},
    "source": [
-    "New entries cann be assigned by using `set` or `modified` depending on whether the entry already exists or not:"
+    "New entries can be assigned by using `set` or `modified` depending on whether the entry already exists or not:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "9e4ce9fe-de0e-4e3c-9410-e5dc891294af",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test_SNC (version: 1)\n",
-      "+------------+-------------------+------------------------------------------------------------------------------+\n",
-      "|            | canonical_units   | description                                                                  |\n",
-      "|------------+-------------------+------------------------------------------------------------------------------|\n",
-      "| time       | s                 | physical time                                                                |\n",
-      "| x_velocity | m/s               | velocity is a vector quantity. x indicates the component in y-axis direction |\n",
-      "| y_velocity | m/s               | velocity is a vector quantity. y indicates the component in y-axis direction |\n",
-      "| z_velocity | m/s               | velocity is a vector quantity. z indicates the component in z-axis direction |\n",
-      "+------------+-------------------+------------------------------------------------------------------------------+\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc.set('time', canonical_units='s', description='physical time')\n",
     "sc.modify('x_velocity', canonical_units='m/s', description='velocity is a vector quantity. x indicates the component in y-axis direction')\n",
@@ -202,33 +135,26 @@
    "id": "a2855d67-4e91-4d32-a173-c581f77b6b93",
    "metadata": {},
    "source": [
-    "## Writing Standard Name Convention to XML\n",
+    "## Writing Standard Name Convention to file\n",
     "\n",
-    "Standardized name tables should be provided as xml documents:"
+    "Standardized name tables should be saved as xml documents or yaml-files:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "7d29f972-b6c2-4a25-85cc-8d8c39f28154",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "WindowsPath('C:/Users/da4323/AppData/Local/h5rdmtoolbox/h5rdmtoolbox/tmp/tmp26/tmp0.xml')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "xml_filename = h5tbx.generate_temporary_filename(suffix='.xml')\n",
-    "sc.to_xml(xml_filename)"
+    "sc.to_xml(xml_filename)\n",
+    "\n",
+    "yml_filename = h5tbx.generate_temporary_filename(suffix='.yml')\n",
+    "sc.to_yaml(yml_filename)\n",
+    "pass"
    ]
   },
   {
@@ -236,225 +162,91 @@
    "id": "9fa87fb5-04c1-4cb1-bae8-6a5f57339ad1",
    "metadata": {},
    "source": [
-    "## Load Standard Name Convention from XML"
+    "## Load Standard Name Convention from file\n",
+    "\n",
+    "If you have standard name tables to your hand, just load them. They must be provided as XML or YML:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "be7625e3-349d-49bd-a14c-e9b2f220da91",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Test_SNC-v1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>canonical_units</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>time</th>\n",
-       "      <td>s</td>\n",
-       "      <td>physical time</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>x_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity. x indicates the component in y-axis direction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity. y indicates the component in y-axis direction</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>z_velocity</th>\n",
-       "      <td>m/s</td>\n",
-       "      <td>velocity is a vector quantity. z indicates the component in z-axis direction</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc_test = h5tbx.conventions.StandardizedNameTable.from_xml(xml_filename)\n",
+    "print(sc_test.versionname)\n",
+    "sc_test.dump()\n",
+    "\n",
+    "sc_test = h5tbx.conventions.StandardizedNameTable.from_yml(yml_filename)\n",
     "print(sc_test.versionname)\n",
     "sc_test.dump()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1f23f296-6757-4ad8-9c43-1a3a383c185f",
+   "id": "7f0dcdab-e9b3-4e89-bec7-06eda703bdbc",
    "metadata": {},
    "source": [
-    "## Existing Standard Name Convention\n",
-    "There are already a domain-specific convention provided by the repository for fluid problems. As they are far from complete and under current deelopment at the current stage, we rather have a look into the cf-conventions from which the concept is adopted. We can download the current XML document from https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml by using the `turoial` module of this repo:"
+    "## Load from web\n",
+    "Optimally a community has defined a naming conventions, just like the cfconventions from where the concept is adoped. Let's imort their latest xml document:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "49060588-f59a-415b-b0ca-55afbf4f609a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "standard_name_table (version number: 79)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cf_xml_filename = h5tbx.tutorial.Conventions.fetch_cf_standard_name_table()\n",
+    "cf_xml_filename = h5tbx.conventions.StandardizedNameTable.from_web(url='https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml')\n",
     "cf_xml_filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "24fcc5e1-6c7a-43ce-a370-47ebe5449ba5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>canonical_units</th>\n",
-       "      <th>grib</th>\n",
-       "      <th>amip</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>acoustic_signal_roundtrip_travel_time_in_sea_water</th>\n",
-       "      <td>s</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>The quantity with standard name acoustic_signal_roundtrip_travel_time_in_sea_water is the time taken for an acoustic signal to propagate from the emitting instrument to a reflecting surface and back again to the instrument. In the case of an instrument based on the sea floor and measuring the roundtrip time to the sea surface, the data are commonly used as a measure of ocean heat content.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>aerodynamic_particle_diameter</th>\n",
-       "      <td>m</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>The diameter of a spherical particle with density 1000 kg m-3 having the same aerodynamic properties as the particles in question.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>y_wind_gust</th>\n",
-       "      <td>m s-1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>\"y\" indicates a vector component along the grid y-axis, positive with increasing y. Wind is defined as a two-dimensional (horizontal) air velocity vector, with no vertical component. (Vertical motion in the atmosphere has the standard name upward_air_velocity.) A gust is a sudden brief period of high wind speed. In an observed time series of wind speed, the gust wind speed can be indicated by a cell_methods of maximum for the time-interval. In an atmospheric model which has a parametrised calculation of gustiness, the gust wind speed may be separately diagnosed from the wind speed.</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>zenith_angle</th>\n",
-       "      <td>degree</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Zenith angle is the angle to the local vertical; a value of zero is directly overhead.</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cf_xml_filename.dump(max_rows=4)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "923fb6d4-e82d-4bc0-8b02-d9588916c20c",
+   "metadata": {},
+   "source": [
+    "## Perform checks\n",
+    "A naming convention can be used to test new standard names, whether they comply with it or not:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ae55dbd6-af9a-4346-b232-b9f4fed3e436",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cf_xml_filename.check_name('zenith_angle', strict=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "7ef1281b-1b74-4143-b57e-299735526941",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "m/s"
-      ],
-      "text/latex": [
-       "$\\frac{\\mathrm{m}}{\\mathrm{s}}$"
-      ],
-      "text/plain": [
-       "<Unit('meter / second')>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cf_xml_filename['x_wind_gust'].canonical_units"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "67174d49-18b5-4c47-af61-36e391f85eb0",
    "metadata": {},
    "outputs": [],
@@ -467,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a77d1c78-6a18-434d-b483-5cfeb049fd37",
    "metadata": {},
    "outputs": [],
@@ -477,49 +269,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "a773fd35-a187-4bd3-a083-d944b8347130",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'degree'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "_units_power_fix('degree')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6497fe45-cb00-4566-9031-4fdad221ccff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unit of standard name \"zenith_angle\" not as expected: \"K\" != \"deg\"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    cf_xml_filename.check_units('zenith_angle', units='K')\n",
@@ -527,14 +290,6 @@
     "    print(e)\n",
     "cf_xml_filename.check_units('zenith_angle', units='degree')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6bcea4c-7cb0-4b36-bdde-2ee9b12b7f46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
