registering standard names and checking works

--- a/docs/conventions/conventions.ipynb
+++ b/docs/conventions/conventions.ipynb
@@ -135,7 +135,7 @@
    "id": "a2855d67-4e91-4d32-a173-c581f77b6b93",
    "metadata": {},
    "source": [
-    "## Writing Standard Name Convention to file\n",
+    "## Saving Standard Name Conventions\n",
     "\n",
     "Standardized name tables should be saved as xml documents or yaml-files:"
    ]
@@ -155,6 +155,43 @@
     "yml_filename = h5tbx.generate_temporary_filename(suffix='.yml')\n",
     "sc.to_yaml(yml_filename)\n",
     "pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88bc791e-8ea4-491f-bc6e-3fdc5149575b",
+   "metadata": {},
+   "source": [
+    "For later usage from anywhere, the table can be registerd with the toolbox. Call `register()`. It save the convention as yml file in the user directory for standard name data and will use the `versionname`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4e396b6-9564-4e39-aba8-0c8e9ebbef90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.register(overwrite=True)\n",
+    "h5tbx.conventions.StandardizedNameTable.print_registered()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63b38596-fb6d-420f-ac97-9462f38ea76a",
+   "metadata": {},
+   "source": [
+    "Use the command line call"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fe3ac64-a900-407c-ac09-69ec7187a538",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! h5check -list names"
    ]
   },
   {
@@ -187,6 +224,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c7aa611-30f4-457e-a7cf-87a228be9f90",
+   "metadata": {},
+   "source": [
+    "Load a registered Standard Name Table from the toolbox:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3861a50-33bc-4625-80d3-6ef95deeddf6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h5tbx.conventions.StandardizedNameTable.load_registered('Test_SNC-v1').dump()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7f0dcdab-e9b3-4e89-bec7-06eda703bdbc",
    "metadata": {},
    "source": [
@@ -201,8 +256,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cf_xml_filename = h5tbx.conventions.StandardizedNameTable.from_web(url='https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml')\n",
-    "cf_xml_filename"
+    "cf = h5tbx.conventions.StandardizedNameTable.from_web(url='https://cfconventions.org/Data/cf-standard-names/79/src/cf-standard-name-table.xml')\n",
+    "cf"
    ]
   },
   {
@@ -212,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cf_xml_filename.dump(max_rows=4)"
+    "cf.dump(max_rows=4)"
    ]
   },
   {
@@ -231,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cf_xml_filename.check_name('zenith_angle', strict=True)"
+    "cf.check_name('zenith_angle', strict=True)"
    ]
   },
   {
@@ -241,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cf_xml_filename['x_wind_gust'].canonical_units"
+    "cf['x_wind_gust'].canonical_units"
    ]
   },
   {
@@ -252,7 +307,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    cf_xml_filename.check_units('x_wind_gust', units='m/s')\n",
+    "    cf.check_units('x_wind_gust', units='m/s')\n",
     "except h5tbx.conventions.StandardizedNameError as e:\n",
     "    print(e)"
    ]
@@ -285,11 +340,77 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    cf_xml_filename.check_units('zenith_angle', units='K')\n",
+    "    cf.check_units('zenith_angle', units='K')\n",
     "except h5tbx.conventions.StandardizedNameError as e:\n",
     "    print(e)\n",
-    "cf_xml_filename.check_units('zenith_angle', units='degree')"
+    "cf.check_units('zenith_angle', units='degree')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3562c750-98b1-4068-a6fe-4c7028b9f946",
+   "metadata": {},
+   "source": [
+    "Perform a check on a file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbf33dbe-4453-482e-8cd9-2462bf7f81c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File() as h5:\n",
+    "    h5.create_dataset('zenith angle 1', shape=(3,), units='K', standard_name='zenith_angle')\n",
+    "    h5.create_dataset('zenith angle 2', shape=(3,), units='degree', standard_name='zenith_angle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef3f5cbe-4106-469c-a85d-d5517be154d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cf.check_file(h5.hdf_filename, raise_error=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "160839e2-7ad3-4194-b341-88c75569ae39",
+   "metadata": {},
+   "source": [
+    "Use the command line call"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fd0adab-2a27-456d-96bb-c3f07e9773f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cf.register(overwrite=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba85f48f-9c41-4a24-b267-c182ff400e2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! h5check -f {h5.hdf_filename} -n {cf.versionname}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8fff9d4a-b83a-467b-8a9f-92f00d3c6c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
