--- a/docs/h5database/Serverless.ipynb
+++ b/docs/h5database/Serverless.ipynb
@@ -130,14 +130,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51902ba3-dc40-47e1-8a5f-ea8d90f2a558",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "97d0af63-641e-4d45-95f3-0f0f30051254",
    "metadata": {},
@@ -353,8 +345,16 @@
    "source": [
     "with H5Files(*[sr.filename for sr in sub_repo[0:4]]) as h5files:\n",
     "    print(h5files.keys())\n",
-    "    h5files[list(h5files.keys())[0]].dump()"
+    "    h5files[0].dump()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7255276-ef7c-49f9-9127-b41072a7612d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
