--- a/docs/h5wrapper/DatasetCreation.ipynb
+++ b/docs/h5wrapper/DatasetCreation.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5rdmtoolbox as h5tbx"
+    "import h5rdmtoolbox as h5tbx\n",
+    "import numpy as np"
    ]
   },
   {
@@ -89,6 +90,52 @@
     "        \n",
     "    h5.create_dataset('x', shape=(4,), units='m', standard_name='x_coordinate')  # not finally correct\n",
     "    h5.create_dataset('y', shape=(4,), units='km', standard_name='y_coordinate')  # only base units is checked"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7074b05a-d5d0-487b-aaed-fb5dee043a6b",
+   "metadata": {},
+   "source": [
+    "**Dataset creation in non-existing groups**: If a dataset name includes a path in the HDF5 file that does not exist, it is created along the way:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba439684-87de-477e-bfc9-ca1645cc5fa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File() as h5:\n",
+    "    h5.create_dataset('grp/subgrp/x', shape=(4,), units='m', standard_name='x_coordinate')\n",
+    "    h5.dump()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab70316c-64c5-4a56-a920-3caf83322963",
+   "metadata": {},
+   "source": [
+    "## Dimension scales\n",
+    "\n",
+    "Dimension scales can be defined during dataset creation. Let `time` be the dimension scale and `pressure` be the dataset to which it is attached. The dataset also has a well-defined x-coordinate, too:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceb9c820-070c-4cd7-b944-5e130bd7e7dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with h5tbx.H5File() as h5:\n",
+    "    h5.create_dataset('x', data=5.32, units='m', standard_name='x_coordinate')\n",
+    "    h5.create_dataset('time', data=[0,1,2,3,4,5], units='s', standard_name='time', make_scale=True)\n",
+    "    h5.create_dataset('pressure', data=np.random.rand(6), units='Pa', standard_name='time', attach_scale=((h5['time'])),\n",
+    "                     attrs={'COORDINATES': ('x',)})  # the x-coordinate must be attach using the attribute \"COORDINATES\"\n",
+    "    p = h5.pressure[:]\n",
+    "p"
    ]
   },
   {
@@ -183,7 +230,6 @@
    "outputs": [],
    "source": [
     "import xarray as xr\n",
-    "import numpy as np\n",
     "arr =  xr.DataArray(dims=('y', 'x'), data=np.random.rand(3, 2),\n",
     "                                 coords={'y': xr.DataArray(dims='y', data=[1, 2, 3],\n",
     "                                                               attrs={'units': 'm',\n",
