--- a/docs/x2hdf/piv2hdf.ipynb
+++ b/docs/x2hdf/piv2hdf.ipynb
@@ -5,7 +5,7 @@
    "id": "50e2fb6c-b272-4c83-848f-380172b181e1",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# PIV to HDF5\n",
     "The coordinate system of a PIV recording has axis names `x`, `y` and `z`. The illuminated plane is the `xy`-plane. Thus, ich plane has a constant `z`-coordinate. As a PIV recording consists of multiple images over time, this information is stored in the time vector `t`.<br>\n",
     "\n",
     "Definition of a `snapshot`, a `plane` and a `case` is exactly:\n",
